app/assets/stylesheets/locals/catalog.css.scss
/* -------------------- */
/* CATALOG ---------- */
/* -------------------- */

/* This is a record display in a search result*/

#documents .document {
	margin-top:0;
	padding-top:0;
	margin-bottom:2em;
	padding-bottom:2em;
}

/* Image container */
.blacklight-catalog .document .media-left {
	padding-right:3%;
	width:40%;
}

	.blacklight-catalog .document .media-left img {
		-webkit-box-shadow: 2px 2px 5px 2px rgba(0,0,0,.15);
		box-shadow: 2px 2px 5px 2px rgba(0,0,0,.15);
	}
	
	/* Image:hover; */
	.blacklight-catalog .document .media-left a:hover img {
		opacity:.8;
	}

	/* Media Body */
	dl {
		border-bottom:1px solid #e4e4e4;
		font-size:0.875em;
		margin:0 0 1em;
	}

	
		dt {
			color:#9f2064;
			margin:0 0 .75em;
		}

		dd {
			margin:0 0 .75em;
		}


		.media-body dl {
			border:none;
		}

		.media-body dt,
		.media-body dd {
			margin:0;
		}

		/*Trcky dl*/
		dl:after {
			visibility: hidden;
			display: block;
			font-size: 0;
			content: " ";
			clear: both;
			height: 0;
		}
	* html dl             { zoom: 1; } /* IE6 */
	*:first-child+html dl { zoom: 1; } /* IE7 */




/*---------*/
/* SEARCH ---------*/
/*---------*/


/*universal*/ 
.search-panel {
	margin:0 auto 2em;
}

.search-query-form .input-group {
	border:1px solid #CCC;
	width:100%;
}

/*select list*/
.search-query-form .input-group .input-group-addon {
	background-color:rgba(0,0,0,.1);
	border:none;
	padding:0;
	width:30%;
}

	.search-query-form .input-group-lg .input-group-addon {
		width:20%;
	}
        
	.search-query-form .input-group-lg option {
		background-color:#292A72;
	}
	
	/*select list*/
	.search-query-form .input-group .input-group-addon .search_field {
		background-color: transparent;
		border: none;
		padding:0;
		width:100%;
	}


/* field */
.search-query-form .input-group .form-control {
	border: none;
}

/*button*/
.search-query-form .input-group .search-btn {
	background-color:#FFF;
	color: #292A72;
	margin-left:0;
}



/* SMALL */ 
.search-query-form .input-group-sm,
.search-query-form .input-group-sm .input-group-addon
.search-query-form .input-group-sm .search_field,
.search-query-form .input-group-sm .form-control,
.search-query-form .input-group-sm .search-btn {
	height:30px;
}
	
	/*the button*/
	.search-query-form .input-group-sm .input-group-btn {
		width:30px;
	}

		/*in the header*/
		.secondary-nav .search-query-form {
			margin:.5em 0;
			width:300px;
		}

/* Large */ 
.search-query-form .input-group-lg,
.search-query-form .input-group-lg .input-group-addon
.search-query-form .input-group-lg .search_field,
.search-query-form .input-group-lg .form-control,
.search-query-form .input-group-lg .search-btn {
	height:50px;
}
	
	/*the button*/
	.search-query-form .input-group-lg .input-group-btn {
		width:50px;
	}


	/*on the homepage*/
	.blacklight-home .search-query-form .input-group-lg {
		border:none;
		margin:0 auto;
		width:75%;
	}

		/*select list*/
		.blacklight-home .search-query-form .input-group-lg .input-group-addon .search_field {
			color:#FFF;
		}


/*THis is for a search in the left column*/
.column .panel-primary {
	border:none;
}

/* Date range slider */

.slider-handle {
    background-color: #3c439b !important;
    background-image: none !important;
    opacity: 1.0 !important;
    border-radius: 10px !important;
}

.slider_js .slider-selection {
    background-color: #dddddd !important;
}


/* -------------------- */
/* RECORD ---------- */
/* -------------------- */
.org-o-tron {
	padding:2em;
	text-align:center;

	background: rgba(255,255,255,1);
	background: -moz-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 15%, rgba(233,233,233,1) 100%);
	background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, rgba(255,255,255,1)), color-stop(15%, rgba(255,255,255,1)), color-stop(100%, rgba(233,233,233,1)));
	background: -webkit-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 15%, rgba(233,233,233,1) 100%);
	background: -o-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 15%, rgba(233,233,233,1) 100%);
	background: -ms-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 15%, rgba(233,233,233,1) 100%);
	background: radial-gradient(ellipse at center, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 15%, rgba(233,233,233,1) 100%);
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e9e9e9', GradientType=1 );
}

	.org-logo {
		height:80px;
		width:auto;
	}


/* -------------------- */
/* ORG State list ---------- */
/* -------------------- */
.org-state .btn-link {
	color:#5D60AB;
}


/* -------------------- */
/* RECORD ---------- */
/* -------------------- */

/* thumb display */
.media-thumb {
	text-align:center;
	background: rgba(255,255,255,1);
	background: -moz-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 15%, rgba(233,233,233,1) 100%);
	background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, rgba(255,255,255,1)), color-stop(15%, rgba(255,255,255,1)), color-stop(100%, rgba(233,233,233,1)));
	background: -webkit-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 15%, rgba(233,233,233,1) 100%);
	background: -o-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 15%, rgba(233,233,233,1) 100%);
	background: -ms-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 15%, rgba(233,233,233,1) 100%);
	background: radial-gradient(ellipse at center, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 15%, rgba(233,233,233,1) 100%);
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e9e9e9', GradientType=1 );
}

	.media-thumb img {
		margin:0 auto;
    width: 50%;
	}


/* Navbar Toggle */
.column .navbar-default .navbar-toggle, 
.column .navbar-default .facets- {
	border:none;
}

	.column .navbar-default .navbar-toggle .icon-bar, 
	.column .navbar-default .facets-toggle .icon-bar {
		background-color:#FFF;
	}

	.navbar-default .navbar-toggle:hover, 
	.navbar-default .facets-toggle:hover, 
	.navbar-default .navbar-toggle:focus, 
	.navbar-default .facets-toggle:focus {
	  background-color: transparent;
	}




/* thumb display */
.media-thumb {
	text-align:center;
	background: rgba(255,255,255,1);
	background: -moz-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 15%, rgba(233,233,233,1) 100%);
	background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, rgba(255,255,255,1)), color-stop(15%, rgba(255,255,255,1)), color-stop(100%, rgba(233,233,233,1)));
	background: -webkit-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 15%, rgba(233,233,233,1) 100%);
	background: -o-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 15%, rgba(233,233,233,1) 100%);
	background: -ms-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 15%, rgba(233,233,233,1) 100%);
	background: radial-gradient(ellipse at center, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 15%, rgba(233,233,233,1) 100%);
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e9e9e9', GradientType=1 );
}

	.media-thumb img {
		margin:0 auto;
    width: 50%;
	}


/* Navbar Toggle */
.column .navbar-default .navbar-toggle, 
.column .navbar-default .facets- {
	border:none;
}

	.column .navbar-default .navbar-toggle .icon-bar, 
	.column .navbar-default .facets-toggle .icon-bar {
		background-color:#FFF;
	}

	.navbar-default .navbar-toggle:hover, 
	.navbar-default .facets-toggle:hover, 
	.navbar-default .navbar-toggle:focus, 
	.navbar-default .facets-toggle:focus {
	  background-color: transparent;
	}

